--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
