--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.7",
-    "terser": "^5.39.2"
+    "terser": "^5.39.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
