--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server/index.js",
+    "deploy": "npm run build && npm run start"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
@@ -15,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "helmet": "^7.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.15.0",
     "react": "^19.1.0",
