--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "node server/index.js",
-    "deploy": "npm run build && npm run start"
+    "netlify-deploy": "netlify deploy --prod"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
