Mise à jour de la configuration de MongoDB : ajout de la variable d'environnement MONGODB_URI et optimisation de la connexion avec des options pour MongoDB Atlas. Amélioration de la configuration CORS pour le déploiement.

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,4 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  MONGODB_URI = "mongodb+srv://comadmin:comymedia2025@cluster0.ewmfj56.mongodb.net/besoins_affichage?retryWrites=true&w=majority"
