--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,12 @@
   to = "/index.html"
   status = 200
 
+[[redirects]]
+  from = "/api/*"
+  to = "https://votre-serveur-backend.herokuapp.com/api/:splat"
+  status = 200
+  force = true
+
 [build.environment]
   NODE_VERSION = "18"
   MONGODB_URI = "mongodb+srv://comadmin:comymedia2025@cluster0.ewmfj56.mongodb.net/besoins_affichage?retryWrites=true&w=majority"
