--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server/index.js",
-    "netlify-deploy": "netlify deploy --prod"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
