--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "helmet": "^7.2.0",
     "lodash": "^4.17.21",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^6.21.1",
     "tailwindcss": "^4.1.7",
     "terser": "^5.39.2",
     "xlsx": "^0.18.5"
@@ -37,5 +37,9 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
