chore: update dependencies and add server start message
- Updated @tailwindcss/vite to version 4.1.8 in package.json
- Updated tailwindcss to version 4.1.8 in package.json
- Added a console log message to indicate the API server has started in server/index.js

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server/index.js"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -22,7 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.21.1",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^4.1.8",
     "terser": "^5.39.2",
     "xlsx": "^0.18.5"
   },
